--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,11 @@ configurations {
 	}
 }
 
-repositories {
-	mavenCentral()
+allprojects {
+	repositories {
+		mavenCentral()
+		maven { url "https://jitpack.io" }
+	}
 }
 
 dependencies {
@@ -27,10 +30,9 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 	implementation 'com.auth0:java-jwt:4.2.1'
 	implementation 'com.fasterxml.jackson:jackson-base:2.14.2'
-	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
 
-
-
+	implementation 'se.michaelthelin.spotify:spotify-web-api-java:8.0.0'
+	implementation 'com.github.thelinmichael:spotify-web-api-java:master-SNAPSHOT'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
