feat: DB 설정 및 알람 관련 Document 추가

--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,14 @@ dependencies {
 
 	implementation 'com.github.thelinmichael:spotify-web-api-java:master-SNAPSHOT'
 
+	implementation 'com.mysql:mysql-connector-j:8.0.32'
+	implementation 'org.springframework.data:spring-data-mongodb'
+	implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.h2database:h2'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
